[package]
name = "io-time"
description = "I/O-free time library"
version = "0.0.2"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "date-and-time", "no-std"]
keywords = ["io-free", "coroutine", "time", "timer"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-time/latest/io_time"
repository = "https://github.com/pimalaya/io-time"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
std = []
timer = ["dep:io-socket", "dep:serde_json"]

[dev-dependencies]
io-socket = { version = "0.0.1", default-features = false }

[dependencies]
io-socket = { version = "0.0.1", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
thiserror = { version = "2", default-features = false }

[patch.crates-io]
io-socket.git = "https://github.com/pimalaya/io-socket"
